<resources>
    <string name="app_name">GithubJobs</string>
    <string name="try_searching">Try Searching</string>
    <string name="no_jobs_found_matching_these_criteria">No jobs found matching these criteria</string>
    <string name="activity_search_location_hint">Location</string>
    <string name="activity_search_description_hint">Description</string>
    <string name="activity_search_search_button">Search\njobs</string>
    <string name="activity_login_login_button">Login</string>
    <string name="activity_login_already_registered">Already registered?</string>
    <string name="activity_login_signup_button">Sign Up</string>
    <string name="activity_login_sign_in_short">Login</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_email_hint">Email</string>
</resources>
